syntax = "proto3";

package proto.onboardings.domain.v1.commands;

message RegisterCrmEntityRequest {
  string id = 1;
  string value = 2;
}
message RequestDeputyOwnerRequest {
  string id = 1;
  string deputyOwnerEmail = 2;
}
message ApproveEntityRequest {
  string comment = 1;
}
message RejectEntityRequest {
  string comment = 1;
}