syntax = "proto3";

package proto.onboardings.domain.v1.queries;
import "domain/v1/workflows.proto";
import "domain/v1/values.proto";

message EntityOnboardingStateResponse {
  string id = 1;
  proto.onboardings.domain.v1.workflows.OnboardEntityRequest sent_request = 2;
  proto.onboardings.domain.v1.values.Approval approval = 3;
  uint64 approval_time_remaining_seconds = 4;
}
