syntax = "proto3";

package proto.onboardings.domain.v1.workflows;

enum Errors {
  ERR_ONBOARD_ENTITY_TIMED_OUT = 0;
  ERR_ONBOARD_ENTITY_INVALID_ARGS = 1;
}
message OnboardEntityRequest {
  string id = 1;
  string value = 2;
  uint64 completionTimeoutSeconds = 3;
  string deputyOwnerEmail = 4;
  bool skipApproval = 5;
}